--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,23 @@ html {
   font-weight: 300;
   text-rendering: optimizelegibility;
 }
+
+.row {
+  max-width:1140px;
+  margin: 0 auto;
+}
+
+header  {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7) #000), url(img/hero.jpg);
+  background-size: cover;
+  background-positionL: center;
+  height: 100vh;
+}
+
+.hero-text-box {
+  position: absolute;
+  width: 1140px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+}
