--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,12 @@ html {
 }
 
 .row {
-  max-width:1140px;
+  max-width: 1140px;
   margin: 0 auto;
 }
 
-header  {
-  background-image: url(img/hero.jpg);
+header {
+  background-image: linear-gradient(rgba(9,9,9,0.7, #000), url(img/hero.jpg);
   background-size: cover;
   background-positionL: center;
   height: 100vh;
