--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,7 @@ html {
 }
 
 header {
-  background-image: url(img/hero.jpg);
-  background-image: linear-gradient(rgba(23,23,23,0.7), rgba(23,23,23,0.7));
+  background-image: linear-gradient(rgba(23,23,23,0.7), rgba(23,23,23,0.7)), url(img/hero.jpg);
   background-size: cover;
   background-positionL: center;
   height: 100vh;
