--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,11 @@ header {
   left: 50%;
   transform: translate(-50%, -50%)
 }
+
+h1 {
+  color: #ffa500;
+  font-size: 200%;
+  font-weight: 300;
+  letter-spacing: 1px;
+  word-spacing: 3px;
+}
