--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,8 @@ h1 {
 }
 
 .btn {
-  padding: 10px, 30px;
+  display: inline-block;
+  padding: 10px 30px;
   font-weight: 300;
   text-decoration: none;
   border-radius: 200px;
