--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,7 @@ h1 {
   word-spacing: 3px;
 }
 
-.btn:link
-.btn:visited {
+.btn {
   display: inline-block;
   padding: 10px 30px;
   font-weight: 300;
