--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,8 @@ h1 {
   word-spacing: 3px;
 }
 
-.btn {
+.btn:link,
+.btn:visited {
   display: inline-block;
   padding: 10px 30px;
   font-weight: 300;
