--- a/css/style.css
+++ b/css/style.css
@@ -49,5 +49,15 @@ h1 {
   text-decoration: none;
   border-radius: 200px;
   color: #fff;
+  border: 1px, solid, #e67e22;
 }
 
+.btn1:link,
+.btn1:visited {
+  background-color: #e67e22;
+  
+}
+
+.btn2:link,
+.btn2:visited {
+}
