--- a/css/style.css
+++ b/css/style.css
@@ -48,17 +48,17 @@ h1 {
   font-weight: 300;
   text-decoration: none;
   border-radius: 200px;
+  color: #fff;
 }
 
 .btn1:link,
 .btn1:visited {
   background-color: #e67e22;
-  border: 1px, solid, #e67e22;
   }
 
 .btn2:link,
 .btn2:visited {
-  border: 1px, solid, #e67e22;
+ 
 }
 
 .btn:hover,
