--- a/css/style.css
+++ b/css/style.css
@@ -49,13 +49,14 @@ h1 {
   text-decoration: none;
   border-radius: 200px;
   color: #fff;
-  transition: background-color 0,2s;
+  transition: background-color 0.2s;
 }
 
 .btn1:link,
 .btn1:visited {
   background-color: #e67e22;
   border: 1px solid #e67e22;
+  margin-right: 10px;
 }
 
 .btn2:link,
