--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/*############################################################
+#       BASIC SETUP
+#####################################################
+*/
 * {
   margin: 0px;
   padding: 0px;
@@ -18,6 +22,10 @@ html {
   margin: 0 auto;
 }
 
+/*############################################################
+#       HEADER
+#####################################################
+*/
 header {
   background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(img/hero.jpg);
   background-size: cover;
@@ -41,6 +49,11 @@ h1 {
   word-spacing: 3px;
 }
 
+/*############################################################
+#       BUTTONS
+#####################################################
+*/
+
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -49,7 +62,7 @@ h1 {
   text-decoration: none;
   border-radius: 200px;
   color: #fff;
-  transition: background-color 0.5s;
+  transition: background-color 0.5s, border 0.5;
 }
 
 .btn1:link,
@@ -69,3 +82,8 @@ h1 {
   background-color: #cf6d17;
   border: 1px solid #e67e22;
 }
+
+/*############################################################
+#       LOGO AND NAVIGATION
+#####################################################
+*/
