--- a/css/style.css
+++ b/css/style.css
@@ -87,3 +87,10 @@ h1 {
 #       LOGO AND NAVIGATION
 #####################################################
 */
+
+.logo {
+  height: 100px;
+  width: auto;
+  float: left;
+  
+}
