--- a/css/style.css
+++ b/css/style.css
@@ -92,5 +92,16 @@ h1 {
   height: 100px;
   width: auto;
   float: left;
-  
+  margin-top:25px;
+}
+
+.main-nav {
+  float: right;
+  list-style: none;
+  margin-top: 60px;
+}
+
+.main-nav li {
+  display: inline-block;
+  margin-left: 40px;
 }
