--- a/css/style.css
+++ b/css/style.css
@@ -105,3 +105,10 @@ h1 {
   display: inline-block;
   margin-left: 40px;
 }
+
+.main-nav li a {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 90%;
+  text-decoration: none;
+}
