--- a/css/style.css
+++ b/css/style.css
@@ -106,9 +106,18 @@ h1 {
   margin-left: 40px;
 }
 
-.main-nav li a {
+.main-nav li a:link,
+.main-nav li a:visited {
   color: #fff;
   text-transform: uppercase;
   font-size: 90%;
   text-decoration: none;
+  border-bottom: 2px solid transparent;
+  transition: border-bottom 0.3;
+}
+
+.main-nav li a:active,
+.main-nav li a:hover {
+  border-bottom: 2px solid #e67e22;
+  padding: 10px;
 }
