--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ h1 {
   font-size: 90%;
   text-decoration: none;
   border-bottom: 2px solid transparent;
-  transition: border-bottom 0.5;
+  transition: border 0.5s;
 }
 
 .main-nav li a:active,
