--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ h1 {
   text-decoration: none;
   border-radius: 200px;
   color: #fff;
-  transition: background-color 0.5s, border 0.5;
+  transition: background-color 0.5s, border 0.3s, color 0.2s;
 }
 
 .btn1:link,
@@ -75,6 +75,7 @@ h1 {
 .btn2:link,
 .btn2:visited {
   border: 1px solid #e67e22;
+  color: #e67e22;
 }
 
 .btn:hover,
@@ -82,6 +83,14 @@ h1 {
   background-color: #cf6d17;
   border: 1px solid #e67e22;
 }
+
+.btn2:hover,
+.btn2:active {
+  color: #fff;
+}
+
+
+
 
 /*############################################################
 #       LOGO AND NAVIGATION
