--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,18 @@ html {
   margin: 0 auto;
 }
 
+
+h1 {
+  color: #fff;
+  font-size: 200%;
+  font-weight: 300;
+  letter-spacing: 1px;
+  word-spacing: 3px;
+}
+
+section {
+  padding: 80px 0;
+}
 /*############################################################
 #       HEADER
 #####################################################
@@ -41,13 +53,6 @@ header {
   transform: translate(-50%, -50%)
 }
 
-h1 {
-  color: #fff;
-  font-size: 200%;
-  font-weight: 300;
-  letter-spacing: 1px;
-  word-spacing: 3px;
-}
 
 /*############################################################
 #       BUTTONS
