--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,25 @@ h1 {
   word-spacing: 3px;
 }
 
+h2 {
+  font-size: 180%;
+  font-weight:300;
+  letter-spacing: 1px;
+  word-spacing: 3px;
+  text-transform: uppercase;
+  text-align:center;
+}
+
+h2:after{
+  display:block;
+  
+  
+}
 section {
   padding: 80px 0;
 }
+
+
 /*############################################################
 #       HEADER
 #####################################################
