--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ h2:after{
   background-color: #e67e22;
   content: " ";
   width: 450px;
-  margin: 0 auto 20 auto;
+  margin: 0 auto;
   
 }
 section {
