--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,15 @@ section {
   padding: 80px 0;
 }
 
+/*#########################################################################
+# Paraghraps
+##################################################### */
+
+.long-p {
+  line-height: 145%;
+  width: 70%;
+  margin-left: 15%;
+}
 
 /*############################################################
 #       HEADER
