--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,9 @@ html {
 }
 
 
-h1 {
+h1,
+h2,
+h3{
   color: #fff;
   font-size: 200%;
   font-weight: 300;
@@ -32,11 +34,6 @@ h1 {
 }
 
 h2 {
-  font-size: 180%;
-  font-weight:300;
-  letter-spacing: 1px;
-  word-spacing: 3px;
-  text-transform: uppercase;
   text-align:center;
   margin-bottom:20px;
 }
@@ -49,10 +46,18 @@ h2:after{
   width: 450px;
   margin: 0 auto;
   margin-top: 25px;
+  }
+
+h3 {
+  
   
 }
 section {
   padding: 80px 0;
+}
+
+.box {
+  padding: 1%;
 }
 
 /*#########################################################################
