--- a/css/style.css
+++ b/css/style.css
@@ -164,11 +164,13 @@ header {
   text-decoration: none;
   border-radius: 200px;
   color: #fff;
+	    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
+
   transition: background-color 0.5s, border 0.3s, color 0.2s;
 }
 
 .btn1:link,
-.btn1:visited {
+.btn1:visited{
   background-color: #e67e22;
   border: 1px solid #e67e22;
   margin-right: 10px;
@@ -191,6 +193,14 @@ header {
   color: #fff;
 }
 
+input[type=submit] {
+	color: #fff;
+	border-radius: 200%;
+	padding: 10px 30px;
+	display: block;
+	border: 1px solid #cf6d17;
+	background-color: #cf6d17;
+}
 
 
 
@@ -233,6 +243,27 @@ header {
   padding: 10px;
 }
 
+.sticky {
+	position:fixed; 
+	top: 0;
+	left: 0; 
+	background-color: rgba(255,255,255,0.95);
+	width: 100%;
+	box-shadow: 0 2px 2px #c6c6c6;
+	z-index: 9999;
+}
+
+.sticky .logo {
+	height: 50px;
+	margin: 15px 0;
+}
+.sticky .main-nav  {
+	margin: 30px 0 15px 0;
+	padding-bottom: 18px;
+}
+.sticky .main-nav li a{
+	color: #000;
+}
 /*############################################
 #        MEALS
 #################################################### */
@@ -349,7 +380,7 @@ header {
 blockquote {
   margin-top: 40px;
   margin-left: 5px;
-  font size: 90%;
+  font-size: 90%;
   font-weight:100;
   font-style: italic;
   margin-bottom: 35px;
@@ -436,3 +467,75 @@ cite {
   margin-left: 20%;
 }
 
+input[type=text],
+input[type=email],
+textarea {
+	width: 100%;
+	padding: 5px;
+	border-radius: 10px;
+	border: 1px solid #B7B7B7;
+}
+
+textarea {
+	height: 100px;
+}
+
+select {
+	padding-right:3px;
+}
+
+*:focus {outline:none;}
+
+/* ----------------------------------------------- */
+/* FORM */
+/* ----------------------------------------------- */
+
+
+footer {
+	background-color: #222;
+	padding: 30px;
+	font-size: 80%;
+}
+
+.foot-nav {
+	list-style: none;
+	float: left;
+	margin-right: 10px;
+}
+
+.social-icons {
+	list-style: none;
+	float: right;
+}
+
+.foot-nav li,
+.social-icons li {
+	display: inline-block;
+	margin-right: 10px;
+	}
+
+.foot-nav li a:hover,
+.foot-nav li a:active,
+.social-icons li a:hover,
+.social-icons li a:active {
+	color: #AAAAAA;
+	font-size: 125%;
+	font-style: oblique;
+}
+
+.foot-nav li a,
+.social-icons li a {
+	color: #606060;
+	border: none;
+	transition: color 0.3s, font-size 0.3s;
+}
+
+.srce {
+	color: #A70002;
+}
+
+footer p {
+	text-align: center;
+	margin-top: 10px;
+	font-size: 90%;
+}
