--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 * {
   margin: 0px;
   padding: 0px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
@@ -53,7 +54,7 @@ h2 {
 h2:after{
   display:block;
   height: 2px;
-  background-color: #e67e22;
+  background-color: #f6f6f6;
   content: " ";
   width: 450px;
   margin: 0 auto;
@@ -73,6 +74,8 @@ a:visited {
   color: #e67e22;
   padding-bottom: 1px;
   border-bottom: 1px solid #e67e22;
+  -webkit-transition: border-bottom 0.5s, color 0.5s;
+  -o-transition: border-bottom 0.5s, color 0.5s;
   transition: border-bottom 0.5s, color 0.5s;
 }
 a:hover {
@@ -135,6 +138,9 @@ section {
 #####################################################
 */
 header {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.7)), to(rgba(0,0,0,0.7))), url(img/hero.jpg);
+  background-image: -webkit-linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(img/hero.jpg);
+  background-image: -o-linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(img/hero.jpg);
   background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(img/hero.jpg);
   background-size: cover;
   background-position: center;
@@ -147,7 +153,9 @@ header {
   width: 1140px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%)
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%)
 }
 
 
@@ -165,6 +173,10 @@ header {
   border-radius: 200px;
   color: #fff;
 	    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
+
+  -webkit-transition: background-color 0.5s, border 0.3s, color 0.2s;
+
+  -o-transition: background-color 0.5s, border 0.3s, color 0.2s;
 
   transition: background-color 0.5s, border 0.3s, color 0.2s;
 }
@@ -234,6 +246,8 @@ input[type=submit] {
   font-size: 90%;
   text-decoration: none;
   border-bottom: 2px solid transparent;
+  -webkit-transition: border 0.5s;
+  -o-transition: border 0.5s;
   transition: border 0.5s;
 }
 
@@ -249,7 +263,8 @@ input[type=submit] {
 	left: 0; 
 	background-color: rgba(255,255,255,0.95);
 	width: 100%;
-	box-shadow: 0 2px 2px #c6c6c6;
+	-webkit-box-shadow: 0 2px 2px #c6c6c6;
+	        box-shadow: 0 2px 2px #c6c6c6;
 	z-index: 9999;
 }
 
@@ -291,12 +306,20 @@ input[type=submit] {
 .meal-photo img {
   height: auto;
   width:100%;
-  transform: scale(1.15);
+  -webkit-transform: scale(1.15);
+      -ms-transform: scale(1.15);
+          transform: scale(1.15);
+  -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+  transition: opacity 0.5s, -webkit-transform 0.5s;
+  -o-transition: transform 0.5s, opacity 0.5s;
   transition: transform 0.5s, opacity 0.5s;
+  transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
 }
 
 .meal-photo img:hover{
-  transform: scale(1.03);
+  -webkit-transform: scale(1.03);
+      -ms-transform: scale(1.03);
+          transform: scale(1.03);
   opacity: 1;
 }
 
@@ -370,12 +393,16 @@ input[type=submit] {
 */
 
 .testimonials {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(23,23,23,0.7)), to(rgba(23,23,23,0.7))), url(img/back-customers.jpg);
+  background-image: -webkit-linear-gradient(rgba(23,23,23,0.7), rgba(23,23,23,0.7)), url(img/back-customers.jpg);
+  background-image: -o-linear-gradient(rgba(23,23,23,0.7), rgba(23,23,23,0.7)), url(img/back-customers.jpg);
   background-image: linear-gradient(rgba(23,23,23,0.7), rgba(23,23,23,0.7)), url(img/back-customers.jpg);
   color: #fff;
   background-attachment: fixed;
   background-size: cover;
   
 }
+
 
 blockquote {
   margin-top: 40px;
@@ -481,7 +508,8 @@ textarea {
 }
 
 select {
-	padding-right:3px;
+	padding: 0 3px;
+	border-radius: 10px;
 }
 
 *:focus {outline:none;}
@@ -527,6 +555,8 @@ footer {
 .social-icons li a {
 	color: #606060;
 	border: none;
+	-webkit-transition: color 0.3s, font-size 0.3s;
+	-o-transition: color 0.3s, font-size 0.3s;
 	transition: color 0.3s, font-size 0.3s;
 }
 
